<resources>
    <string name="app_name">MyLib</string>
    <string name="libraries_near_by">Libraries Near By</string>
    <string name="library_full_name">Library Full Name</string>
    <string name="about_library">About Library</string>
    <string name="location">Location: </string>
    <string name="contact_number">Contact Number: </string>
    <string name="membership_needed">Membership Needed: </string>
    <string name="studying_area">Studying area: </string>
    <string name="working_hours">Working Hours: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="loginText">LOGIN</string>
    <string name="librarySpinner">Pick a Library</string>
    <string name="title">Title</string>
    <string name="textview">TextView</string>
    <string name="author">Author</string>
    <string name="todo">TODO</string>
    <string name="genre">genre</string>
    <string name="about">About</string>
    <string name="borrowed_info">Borrowed Info</string>
</resources>