<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLibraryAbout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/libraryHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-3dp"
                android:gravity="center"
                android:scrollbars="vertical"
                android:text="@string/about_library"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/libraryAbout"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:gravity="center"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/location"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/libraryLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>  -->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/contact_number"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/libraryContact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/membershipNeeded"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/membership_needed"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/libraryNeedsMembership"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/studyingArea"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/studying_area"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/libraryStudyingArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/workingHours"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/working_hours"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/libraryWorkingHours"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>
</FrameLayout>